--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -233,7 +233,7 @@
 
     async function fetchPhoneNumbers() {
       try {
-        const response = await axios.get(`http://localhost:3000/phone-numbers`);
+        const response = await axios.get(`https://twilio-api-t328.onrender.com/phone-numbers`);
         return response.data;
       } catch (error) {
         console.error("Error fetching phone numbers:", error);
@@ -326,7 +326,7 @@
       statusElement.innerText = "";
 
       // Make API call to initiate the call
-      const response = await axios.post(`http://localhost:3000/make-call`, {
+      const response = await axios.post(`https://twilio-api-t328.onrender.com/make-call`, {
         phoneNumber: phoneNumber,
         to: callTo
       }, {
@@ -350,7 +350,7 @@
 
     function fetchCallHistory(number)
     {
-      axios.get(`http://localhost:3000/call-history/${number}`)
+      axios.get(`https://twilio-api-t328.onrender.com/call-history/${number}`)
       .then(response => {
         const callHistoryTable = document.querySelector('.call-history-table');
         callHistoryTable.innerHTML = ''; // Clear "Loading..." message
