--- a/public/login.html
+++ b/public/login.html
@@ -67,7 +67,7 @@
     <h2>Admin Login</h2>
     <form id="login-form">
       <div class="form-group">
-        <input type="text" class="form-control" id="username" placeholder="Username" required />
+        <input type="text" class="form-control" id="email" placeholder="email" required />
       </div>
       <div class="form-group">
         <input type="password" class="form-control" id="password" placeholder="Password" required />
@@ -89,13 +89,13 @@
     document.getElementById('login-form').addEventListener('submit', async function (event) {
       event.preventDefault();
 
-      const username = document.getElementById('username').value;
+      const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
       const response = await fetch('https://twilio-api-t328.onrender.com/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ username, password })
+        body: JSON.stringify({ email, password })
       });
 
       const data = await response.json();
