--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
   <title>Admin Login</title>
   <!-- Bootstrap CSS -->
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     body {
       background: linear-gradient(135deg, #667eea, #764ba2);
@@ -92,21 +93,22 @@
       const email = document.getElementById('email').value;
       const password = document.getElementById('password').value;
 
-      const response = await fetch('https://twilio-api-t328.onrender.com/login', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email, password })
+      axios.post('https://twilio-api-t328.onrender.com/login', {
+        email: email,
+        password: password
       })
-      .then(result)
-      {
-        if (result.data.status) {
-          localStorage.setItem("token", result.data.data.token)
+      .then(response => {
+        if (response.data.status) {
+          localStorage.setItem("token", response.data.data.token);
           window.location.href = 'https://twilio-api-t328.onrender.com/dashboard.html';
         } else {
-          const errorMessage = document.getElementById('error-message');
-          errorMessage.textContent = result.data.message || 'Login failed. Please try again.';
+          document.getElementById('error-message').textContent = response.data.message || 'Login failed. Please try again.';
         }
-      }
+      })
+      .catch(error => {
+        console.error('Login error:', error);
+        document.getElementById('error-message').textContent = 'An error occurred. Please try again.';
+      });
       
 
       
