--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -233,7 +233,13 @@
 
     async function fetchPhoneNumbers() {
       try {
-        const response = await axios.get(`https://twilio-api-t328.onrender.com/phone-numbers`);
+        const token = localStorage.getItem("token"); // Retrieve token from localStorage
+        const response = await axios.get(`https://twilio-api-t328.onrender.com/phone-numbers`, {
+          headers: {
+            Authorization: `Bearer ${token}`
+          }
+        });
+        
         return response.data;
       } catch (error) {
         console.error("Error fetching phone numbers:", error);
