--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -253,6 +253,8 @@
     logoutLink.style.display = "block";
     logoutLink.style.marginTop = "10px";
 
+    logoutLink.onclick = logout;
+    
     sidebarNav.appendChild(logoutLink);
   });
 
