--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <title>Dashboard</title>
   <style>
     body {
@@ -239,7 +241,22 @@
 
   <script>
     const token = localStorage.getItem("token");
+
+    if(!token)
+    {
+      window.stop();
+      window.location.href = `${window.location.origin}/login.html`;
+      return;
+    }
+
     const decoded_token = jwt_decode(token);
+    if (decoded_token.exp < Math.floor(Date.now()/1000))
+    {
+      window.stop();
+      localStorage.removeItem("token");
+      window.location.href = `${window.location.origin}/login.html`;
+      return;
+    }
 
     const username = decoded_token.email.split("@")[0];
     document.getElementById("username-display").textContent = `Hello, ${username}`;
