--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -444,7 +444,7 @@
 
             const row = document.createElement('tr');
             row.innerHTML = `
-              <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${callSid}</td>
+              <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${call.sid}</td>
               <td>${call.from}</td>
               <td>${call.to}</td>
               <td>${call.status}</td>
