--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -425,15 +425,13 @@
 
     function fetchCallHistory(number)
     {
-      console.log(number);
       axios.get(`https://twilio-api-t328.onrender.com/call-history/${number}`, {
         headers: {
           Authorization: `Bearer ${token}`
         }
       })
       .then(response => {
-        console.log(JSON.stringify(response.data));
-        const callHistoryTable = document.querySelector('.call-history-table');
+        const callHistoryTable = document.querySelector(`.call-history-table[data-phone="${phone}"]`);
         callHistoryTable.innerHTML = '';
 
         // Check if the data contains any calls
