--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -476,7 +476,7 @@
           });
 
           // Handle pagination
-          for (let i = 1; i <= totalPages; i++) {
+          for (let i = 1; i <= response.data.totalPages; i++) {
             const pageBtn = document.createElement('button');
             pageBtn.innerText = i;
             pageBtn.className = `page-btn ${i === page ? 'active' : ''}`;
