--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -479,14 +479,15 @@
           const paginatorContainer = document.querySelector(`.paginator[data-phone="${number}"]`);
           paginatorContainer.innerHTML = '';
 
-          console.log(JSON.stringify(response.data.paginatation))
-          for (let i = 1; i <= response.data.paginatation.totalPages; i++) {
-            const pageBtn = document.createElement('button');
-            pageBtn.innerText = i;
-            pageBtn.className = `page-btn ${i === page ? 'active' : ''}`;
-            pageBtn.onclick = () => fetchCallHistory(number, i, pageSize);
-            paginatorContainer.appendChild(pageBtn);
-          }
+          console.log(JSON.stringify(response.data.paginatation));
+
+          // for (let i = 1; i <= response.data.paginatation.totalPages; i++) {
+          //   const pageBtn = document.createElement('button');
+          //   pageBtn.innerText = i;
+          //   pageBtn.className = `page-btn ${i === page ? 'active' : ''}`;
+          //   pageBtn.onclick = () => fetchCallHistory(number, i, pageSize);
+          //   paginatorContainer.appendChild(pageBtn);
+          // }
           
         } else {
           const noDataRow = document.createElement('tr');
