--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -479,7 +479,7 @@
           const paginatorContainer = document.querySelector(`.paginator[data-phone="${number}"]`);
           paginatorContainer.innerHTML = '';
 
-          console.log(JSON.stringify(response.data));
+          console.log(JSON.stringify(response.data.pagination));
 
           // for (let i = 1; i <= response.data.paginatation.totalPages; i++) {
           //   const pageBtn = document.createElement('button');
