--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -479,15 +479,13 @@
           const paginatorContainer = document.querySelector(`.paginator[data-phone="${number}"]`);
           paginatorContainer.innerHTML = '';
 
-          console.log(JSON.stringify(response.data.pagination));
-
-          // for (let i = 1; i <= response.data.paginatation.totalPages; i++) {
-          //   const pageBtn = document.createElement('button');
-          //   pageBtn.innerText = i;
-          //   pageBtn.className = `page-btn ${i === page ? 'active' : ''}`;
-          //   pageBtn.onclick = () => fetchCallHistory(number, i, pageSize);
-          //   paginatorContainer.appendChild(pageBtn);
-          // }
+          for (let i = 1; i <= response.data.pagination.totalPages; i++) {
+            const pageBtn = document.createElement('button');
+            pageBtn.innerText = i;
+            pageBtn.className = `page-btn ${i === page ? 'active' : ''}`;
+            pageBtn.onclick = () => fetchCallHistory(number, i, pageSize);
+            paginatorContainer.appendChild(pageBtn);
+          }
           
         } else {
           const noDataRow = document.createElement('tr');
