--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -406,7 +406,7 @@
             row.innerHTML = `
               <input type="text" class="btn" style="width: 50px; background:white; color:black; border:2px solid #ccc; box-shadow:none; margin-bottom:10px;" value="${setting.digit}" disabled>
               &nbsp;&nbsp;
-              <input type="text" class="form-control" value="${setting.response_text}" required style="text-align: center; width:100px" disabled>
+              <input type="text" class="form-control" value="${setting.content}" required style="text-align: center; width:100px" disabled>
               &nbsp;&nbsp;
               <input type="text" class="form-control" placeholder="Enter phone number" value="${setting.redirect_number || ''}" required disabled>
               &nbsp;&nbsp;
