--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -224,6 +224,26 @@
         width: 100%;
         padding: 12px;
       }
+      
+      #make-call-form {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      #make-call-form .form-group {
+        margin-right: 0;
+        width: 100%;
+      }
+
+      #make-call-form .form-group select,
+      #make-call-form .form-group input {
+        width: 100%;
+      }
+
+      #make-call-form .btn {
+        width: 100%;
+        margin-top: 10px;
+      }
     }
   </style>
 </head>
@@ -245,16 +265,16 @@
     <div class="main-content">
       <div id="section1" class="section">
         <h2>Make a Call</h2>
-        <form id="make-call-form" style="display: flex; align-items: center;">
-            <div class="form-group" style="margin-right: 10px;">
-                <label for="phone-number">Select Phone:</label>
-                <select id="phone-number" class="form-control" style="width: 150px;"></select>
-            </div>
-            <div class="form-group" style="margin-right: 10px;">
-                <label for="call-to">Call To:</label>
-                <input type="text" id="call-to" class="form-control" placeholder="Enter phone number" required style="width: 200px;">
-            </div>
-            <button type="button" onclick="initiateCall()" class="btn">Call</button>
+        <form id="make-call-form" style="display: flex; align-items: center; flex-wrap: wrap;">
+          <div class="form-group" style="margin-right: 10px;">
+            <label for="phone-number">Select Phone:</label>
+            <select id="phone-number" class="form-control"></select>
+          </div>
+          <div class="form-group" style="margin-right: 10px;">
+            <label for="call-to">Call To:</label>
+            <input type="text" id="call-to" class="form-control" placeholder="Enter phone number" required>
+          </div>
+          <button type="button" onclick="initiateCall()" class="btn">Call</button>
         </form>
         <p id="make-call-status"></p>
     
