--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -437,13 +437,9 @@
             <thead>
               <tr>
                 <th>Call SID</th>
-                <th>From</th>
-                <th>To</th>
-                <th>Status</th>
+                <th>From => To</th>
                 <th>Duration (s)</th>
                 <th>DateTime</th>
-                <th>Direction</th>
-                <th>Cost</th>
               </tr>
             </thead>
             <tbody class="call-history-table" data-phone="${phone}">
@@ -456,6 +452,14 @@
         </div>
       `;
 
+      // <th>Call SID</th>
+      // <th>From</th>
+      // <th>To</th>
+      // <th>Status</th>
+      // <th>Duration (s)</th>
+      // <th>DateTime</th>
+      // <th>Direction</th>
+      // <th>Cost</th>
       fetchPhoneSetting(phone);
       fetchCallHistory(phone);
 
@@ -547,20 +551,18 @@
 
         if (response.data.status && response.data.data && response.data.data.length > 0) {
           response.data.data.forEach(call => {
-            const durationInMinutes = Math.ceil(call.duration / 60);
-            const callCost = 0.06 + (durationInMinutes * 0.06);
+            // const durationInMinutes = Math.ceil(call.duration / 60);
+            // const callCost = 0.06 + (durationInMinutes * 0.06);
 
             const row = document.createElement('tr');
             row.innerHTML = `
               <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${call.sid}</td>
-              <td>${call.from}</td>
-              <td>${call.to}</td>
-              <td>${call.status}</td>
+              <td>${call.from} => ${call.to}</td>
               <td>${call.duration}</td>
               <td>${new Date(call.startTime).toLocaleString()}</td>
-              <td>${call.direction}</td>
-              <td>$${callCost.toFixed(2)}</td>
             `;
+            // <td>${call.direction}</td>
+            // <td>$${callCost.toFixed(2)}</td>
             callHistoryTable.appendChild(row);
           });
 
