--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -437,8 +437,9 @@
             <thead>
               <tr>
                 <th>Call SID</th>
-                <th>From => To</th>
-                <th>Duration (s)</th>
+                <th>From</th>
+                <th>To</th>
+                <th>Status</th>
                 <th>DateTime</th>
               </tr>
             </thead>
@@ -557,8 +558,9 @@
             const row = document.createElement('tr');
             row.innerHTML = `
               <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${call.sid}</td>
-              <td>${call.from} => ${call.to}</td>
-              <td>${call.duration}</td>
+              <td>${call.from}</td>
+              <td>${call.to}</td>
+              <td>${call.status}</td>
               <td>${new Date(call.startTime).toLocaleString()}</td>
             `;
             // <td>${call.direction}</td>
