--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -489,11 +489,11 @@
             row.style.marginBottom = "10px";
 
             row.innerHTML = `
-              <input id="redirect${phone}" type="text" class="btn" style="width: 50px; background:white; color:black; border:2px solid #ccc; box-shadow:none; margin-bottom:10px;" value="${setting.digit}" disabled>
+              <input id="redirect${setting.digit}" type="text" class="btn" style="width: 50px; background:white; color:black; border:2px solid #ccc; box-shadow:none; margin-bottom:10px;" value="${setting.digit}" disabled>
               &nbsp;&nbsp;
-              <input id="redirection-description${phone}" type="text" class="form-control" value="${setting.content}" required style="text-align: center; width:100px" disabled>
+              <input id="redirection-description${setting.digit}" type="text" class="form-control" value="${setting.content}" required style="text-align: center; width:100px" disabled>
               &nbsp;&nbsp;
-              <input id="redirection-number${phone}" type="text" class="form-control" placeholder="Enter phone number" value="${setting.redirect_number || ''}" required disabled>
+              <input id="redirection-number${setting.digit}" type="text" class="form-control" placeholder="Enter phone number" value="${setting.redirect_number || ''}" required disabled>
               &nbsp;&nbsp;
               <button class="btn btn-info" style="margin-left: 10px;" onclick="editRedirect('section-${phone}', ${setting.digit})">Edit</button>
               <button class="btn btn-success" style="margin-left: 10px; display: none;" onclick="saveRedirect('section-${phone}', ${setting.digit})">Save</button>
