--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -495,8 +495,8 @@
               &nbsp;&nbsp;
               <input id="redirection-number${setting.digit}" type="text" class="form-control" placeholder="Enter phone number" value="${setting.redirect_number || ''}" required disabled>
               &nbsp;&nbsp;
-              <button class="btn btn-info" style="margin-left: 10px;" onclick="editRedirect('section-${phone}', ${setting.digit})">Edit</button>
-              <button class="btn btn-success" style="margin-left: 10px; display: none;" onclick="saveRedirect('section-${phone}', ${setting.digit})">Save</button>
+              <button id="edit${setting.digit}" class="btn btn-info" style="margin-left: 10px;" onclick="editRedirect('section-${phone}', ${setting.digit})">Edit</button>
+              <button id="save${setting.digit}" class="btn btn-success" style="margin-left: 10px; display: none;" onclick="saveRedirect('section-${phone}', ${setting.digit})">Save</button>
             `;
 
             formGroup.appendChild(row);
