--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -436,11 +436,10 @@
           <table class="table">
             <thead>
               <tr>
-                <th>Call SID</th>
+                <th>DateTime</th>
                 <th>From</th>
                 <th>To</th>
                 <th>Status</th>
-                <th>DateTime</th>
               </tr>
             </thead>
             <tbody class="call-history-table" data-phone="${phone}">
@@ -557,12 +556,12 @@
 
             const row = document.createElement('tr');
             row.innerHTML = `
-              <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${call.sid}</td>
+              <td>${new Date(call.startTime).toLocaleString()}</td>
               <td>${call.from}</td>
               <td>${call.to}</td>
               <td>${call.status}</td>
-              <td>${new Date(call.startTime).toLocaleString()}</td>
             `;
+            // <td style="max-width: 120px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">${call.sid}</td>
             // <td>${call.direction}</td>
             // <td>$${callCost.toFixed(2)}</td>
             callHistoryTable.appendChild(row);
