--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://sdk.twilio.com/js/client/v1.13/twilio.min.js"></script>
   <title>Dashboard</title>
   <style>
     body {
@@ -340,6 +341,7 @@
 
   <script>
     const token = localStorage.getItem("token");
+    let device;
 
     if(!token)
     {
@@ -364,38 +366,59 @@
     const phoneDropdown = document.getElementById("phone-number");
 
     document.addEventListener("DOMContentLoaded", async function () {
-    phoneNumbers = await fetchPhoneNumbers();
+      phoneNumbers = await fetchPhoneNumbers();
 
-    for (const phone of phoneNumbers) {
-      const section = await createPhoneSection(phone);
-      dynamicSection.appendChild(section);
+      for (const phone of phoneNumbers) {
+        const section = await createPhoneSection(phone);
+        dynamicSection.appendChild(section);
 
-      const sidebarLink = document.createElement("a");
-      sidebarLink.href = `#${phone.replace(/\s+/g, "-")}`;
-      sidebarLink.textContent = phone;
-      sidebarNav.appendChild(sidebarLink);
+        const sidebarLink = document.createElement("a");
+        sidebarLink.href = `#${phone.replace(/\s+/g, "-")}`;
+        sidebarLink.textContent = phone;
+        sidebarNav.appendChild(sidebarLink);
 
-      const option = document.createElement("option");
-      option.value = phone; 
-      option.textContent = phone;
-      phoneDropdown.append(option);
-    };
+        const option = document.createElement("option");
+        option.value = phone; 
+        option.textContent = phone;
+        phoneDropdown.append(option);
+      };
 
-    const logoutLink = document.createElement("a");
-    logoutLink.className = "btn";
-    logoutLink.href = "#Logout";
-    logoutLink.textContent = "Logout";
-    logoutLink.style.background = "red";
-    logoutLink.style.color = "white";
-    logoutLink.style.textAlign = "center";
-    logoutLink.style.padding = "10px";
-    logoutLink.style.display = "block";
-    logoutLink.style.marginTop = "10px";
+      initTwilio();
 
-    logoutLink.onclick = logout;
+      const logoutLink = document.createElement("a");
+      logoutLink.className = "btn";
+      logoutLink.href = "#Logout";
+      logoutLink.textContent = "Logout";
+      logoutLink.style.background = "red";
+      logoutLink.style.color = "white";
+      logoutLink.style.textAlign = "center";
+      logoutLink.style.padding = "10px";
+      logoutLink.style.display = "block";
+      logoutLink.style.marginTop = "10px";
 
-    sidebarNav.appendChild(logoutLink);
-  });
+      logoutLink.onclick = logout;
+
+      sidebarNav.appendChild(logoutLink);
+      });
+
+    async function initTwilio() {
+      try {
+        const response = await axios.post('https://twilio-api-t328.onrender.com/get-token');
+        const data = response.data;
+
+        device = new Twilio.Device(data.token, { logLevel: 1 });
+
+        device.on('ready', () => console.log('Twilio Device Ready'));
+        device.on('error', error => console.error('Twilio Error:', error));
+
+        device.on('incoming', connection => {
+          console.log('Incoming Call...');
+          connection.accept();
+        });
+      } catch (error) {
+        console.error('Error initializing Twilio:', error);
+      }
+    }
 
     async function fetchPhoneNumbers() {
       try {
