--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -554,6 +554,12 @@
 
         if (response.data.callSid) {
           statusElement.innerText = `Call initiated successfully. Call SID: ${response.data.callSid}`;
+
+          const connection = device.connect({ conference: 'MyConferenceRoom' });
+          connection.on("accept", () => console.log("Joined conference!"));
+          connection.on("disconnect", () => console.log("Left conference."));
+          connection.on("error", (error) => console.error("Call error:", error));
+
         } else {
           statusElement.innerText = "Call initiated, but no Call SID received.";
         }
